# SDL_homework

./: README.md
.github/workflows/: build.yml  cmake.yml
SDL_dynamic/: CMakeLists.txt  main.cpp
SDL_static/: CMakeLists.txt  main.cpp
test/: CMakeLists.txt  main.cpp
